Fixes button grow with overflow.

--- a/src/sass/content-wrapper.scss
+++ b/src/sass/content-wrapper.scss
@@ -107,6 +107,7 @@ $font-weight-circle-4: 300;
 			color: $color-text-button;
 			padding: 0;
 			opacity: 0;
+			overflow-x: unset;
 
 			&:focus,
 			&:hover,
